[package]
name = "mkv-parse-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type=["cdylib"]

[dependencies]
ebml-iterable = "0.6.3"
js-sys = "0.3.77"
matroska = "0.30.0"
matroska-demuxer = "0.7.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["Blob", "BlobPropertyBag"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

